# OctoGFX

./: CMakeLists.txt  README.md  build.bat
examples/: CMakeLists.txt
examples/00-hello-triangle/: main.cpp
include/octogfx/: octogfx.h
src/: main.cpp  octogfx.cpp  renderer_context.cpp  renderer_context.h
